<resources>
    <string name="app_name">Examen2</string>
    <string name="action_settings">Settings</string>
    <string name="agregarcarro">Agregar Carro</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="placa">Placa</string>
    <string name="rojo">Rojo</string>
    <string name="blanco">Blanco</string>
    <string name="amarillo">Amarillo</string>
    <string name="azul">Azul</string>
    <string name="chevrolet">Chevrolet</string>
    <string name="mazda">Mazda</string>
    <string name="renault">Renault</string>
    <string name="BMW">BMW</string>
    <string name="lamborghini">Lamborghini</string>
    <string name="precio">Precio</string>
    <string name="Error1">El precio no puede ser cero</string>
    <string name="Error2">El campo no puede ir vacio</string>
    <string-array name="opciones_color">
        <item>@string/amarillo</item>
        <item>@string/blanco</item>
        <item>@string/rojo</item>
        <item>@string/azul</item>
    </string-array>
    <string-array name="opciones_marca">
        <item>@string/mazda</item>
        <item>@string/BMW</item>
        <item>@string/lamborghini</item>
        <item>@string/renault</item>
        <item>@string/chevrolet</item>
    </string-array>
</resources>
