<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.holamundo.examen2.AgregarCarro">

    <TextView
        android:id="@+id/Lbl_AgregarCarro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregarcarro"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Txt_Placa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placa" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/Cmb_Color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/opciones_color" />

    <Spinner
        android:id="@+id/Cmb_Marca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/opciones_marca" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Txt_Precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/precio" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Btn_Guardar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="guardar"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/Btn_Limpiar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="limpiar"
            android:text="@string/limpiar" />
    </LinearLayout>
</LinearLayout>
